docs: consolidate repository guidelines into CLAUDE.md
- Merge CLAUDE.md and AGENTS.md content into a unified CLAUDE.md
- Create AGENTS.md as a reference pointer to CLAUDE.md for Codex compatibility
- Add skillhub-notification module to architecture documentation
- Add single test execution commands for backend and frontend
- Clarify dependency inversion architecture and app layer conventions